--- a/web/Administrador/nuevoIngresoPaciente.xhtml
+++ b/web/Administrador/nuevoIngresoPaciente.xhtml
@@ -125,9 +125,9 @@
 
                                     <h4 class="all-tittles">Personas</h4>
                                     <br/><br/><br/>
-                                    <div class="group-material">
+<!--                                    <div class="group-material">
                                         <b:inputText id="idPersona" placeholder="Id Persona:" value="#{vistaBean.persona.idPersona}"/>
-                                    </div>
+                                    </div>-->
                                     <div class="group-material">
                                         <b:inputText id="nombre" placeholder="Nombre: " value="#{vistaBean.persona.nombre}"  />
                                     </div>
@@ -224,9 +224,9 @@
                                         <b:dateTimePicker id="Fecha1" placeholder="Fecha de registro:"   value="#{vistaBean.historial.fecha}" />
                                     </div>
 
-                                    <div class="group-material">    
+<!--                                    <div class="group-material">    
                                         <b:inputText id="empleado" placeholder="idEmpleado: " value="#{vistaBean.historial.idEmpleado}"  />
-                                    </div>
+                                    </div>-->
 
                                     <p class="text-center">
                                         <b:commandButton class="btn btn-primary zmdi zmdi-floppy" value="Guardar" action="#{vistaBean.registrar()}"/>
