--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -57,7 +57,7 @@
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a href="faces/login.xhtml"> Inicio de Sesion </a></button>
+                    <a class="btn btn-outline-info" href="faces/login.xhtml" role="button"> Inicio de Sesion </a>
                 </form>
             </div>
         </nav>
