--- a/web/Administrador/RegistroAdmin.xhtml
+++ b/web/Administrador/RegistroAdmin.xhtml
@@ -45,7 +45,7 @@
         <f:event listener="#{estadoUsuarioBean.listar()}" type="preRenderView"/>
         <f:event listener="#{empleadoBean.listar()}" type="preRenderView"/>
         <f:event listener="#{especialidadBean.listar()}" type="preRenderView"/>
-        <f:event listener="#{personaBean.listarPersona()}" type="preRenderView"/>  
+<!--        <f:event listener="#{personaBean.listarPersona()}" type="preRenderView"/>  -->
         <f:event listener="#{puestoBean.listar()}" type="preRenderView"/>
         <f:event listener="#{generoBean.listarGenero()}" type="preRenderView"/>
         <f:event listener="#{estadoCivilBean.listarReligion()}" type="preRenderView"/>
