--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -160,7 +160,7 @@
                 </article>
 
                 <article class="tile">
-                    <a href="../faces/Administrador/Reportes.xhtml">
+                    <a href="homeDoctor.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/doctor.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Doctor</div>
                     </a>
