--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -15,7 +15,7 @@
         <!-- sweet alert de la pagina -->
         <script src="../resources/js/sweet-alert.min.js"></script>
         <!-- css sweet alert--> 
-       <link rel="stylesheet" href="../resources/css/sweet-alert.css"/>
+        <link rel="stylesheet" href="../resources/css/sweet-alert.css"/>
         <!-- css Material desing -->
         <link rel="stylesheet" href="../resources/css/material-design-iconic-font.min.css"/>
         <!-- css normalize -->
@@ -68,9 +68,13 @@
                         <li>    
                             <div style=" font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
-                                <li style=" font: bold small-caps 120%/200% serif;"><a href="faces/vistaCompleta/nuevoIngresoPaciente.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Usuario</a></li>
+                                <li style=" font: bold small-caps 120%/200% serif;"><a href="../Administrador/EventosAdmin.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Eventos</a></li>
+                                <li style=" font: bold small-caps 120%/200% serif;"><a href="../Administrador/RegistroAdmin.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Administrador</a></li>
+                                <li style=" font: bold small-caps 120%/200% serif;"><a href="../Administrador/nuevoIngresoPaciente.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Paciente</a></li>
                             </ul>
                         </li>
+
+                        <li style=" font: bold small-caps 120%/200% serif;"><a href="../Administrador/Reportes.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Reportes</a></li> 
 
                         <li>
                             <div style=" font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-account-add zmdi-hc-fw"></i>&nbsp;&nbsp; Mantenimiento <i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
