--- a/web/Administrador/nuevoIngresoPaciente.xhtml
+++ b/web/Administrador/nuevoIngresoPaciente.xhtml
@@ -107,14 +107,14 @@
                     <div class="col-xs-12 col-sm-4 col-md-3">
                         <img src="../resources/assets/img/user01.png" alt="user" class="img-responsive center-box" style="max-width: 110px;"/>
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
+                    <div style=" font: bold small-caps 120%/200% serif;" class="col-xs-12 col-sm-8 col-md-8 text-justify lead">
                         Bienvenido a la sección para registrar nuevas personas del sistema, debes de llenar todos los campos del siguiente formulario para registrar una persona
                     </div>
                 </div>
             </div>
 
 
-            <div class="container-fluid">
+            <div class="container-fluid" style=" font: bold small-caps 120%/200% serif;">
                 <div class="container-flat-form">
                     <div class="title-flat-form title-flat-blue">Nuevo Registro Clinico</div>
                     <form autocomplete="off">
