div de error solucionado en nuevoIngresopaciente

--- a/web/Administrador/nuevoIngresoPaciente.xhtml
+++ b/web/Administrador/nuevoIngresoPaciente.xhtml
@@ -266,7 +266,7 @@
                 <div class="footer-copyright full-reset all-tittles">© 2017 Intecap Zona 4 Centro Tics</div>
             </footer>
         </div>
-
+        </div>
     </h:body>
 </html>
 
